[PHOENIX-7840]- Add Succession Reason and Active field in Mutation
Master.